--- a/style.css
+++ b/style.css
@@ -1,16 +1,183 @@
 body {
-  background-color: #30638e;
+  background-color: #131313;
+  margin: 0;
+  padding: 0;
 }
 
 #name {
   font-family: 'Press Start 2P';
+  color: #fff;
+  font-size: 40px;
+}
+
+#menu {
+  display: flex;
+  padding-left: 5rem;
+  padding-top: 20px;
+}
+
+#encapsula-navegar{
+  width: 80%;
+}
+
+#encapsula-navegar ul {
+  margin: 0;
+  list-style: none;
+  float: right;
+}
+
+#encapsula-navegar ul li {
+  display: inline;
+}
+
+#encapsula-navegar ul li a{
+  padding: 10px 10px;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  text-decoration: none;
+  color: #fff;
+}
+
+#encapsula-navegar ul li a:hover {
+  color: #d04b38;
+}
+
+#logo {
+  font-size: 3rem;
+  color: #fff;
+  font-family: "Syncopate", sans-serif;
+  text-transform: none;
+  transition: 0.5s;
+  font-weight: 400;
+  margin: 0;
+  border: 0;
+  max-width: 200px;
+  display: inline-block;
+}
+
+#sobre-mim {
+  color: #fff;
 }
 
 abbr {
   text-decoration: underline;
 }
 
+h1 {
+  color: #fff;
+}
+
+#left-div {
+  position: relative;
+  float: left;
+  text-align: center;
+  width: 50%;
+  height: 85vh;
+}
+
+#right-div {
+  position: relative;
+  float: left;
+  width: 50%;
+  height: 85vh;
+  float: right;
+  background-image: url("./img/me-portfolio.png");
+  background-size: cover;
+}
+
+#left-div h3{
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
+  border-right: .15em solid white;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+    typing 3.5s steps(60, end),
+    blink-caret .75s step-end infinite;
+}
+
+.pequena-caixa {
+  padding-top: 30vh;
+}
+
+@keyframes typing{
+  from { width: 0}
+  to {width: 100%}
+}
+
+@keyframes blink-caret {
+  from, to {border-color:transparent}
+  50% {border-color: #fff;}
+}
+
+.sobre {
+  height: 85vh;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  font-size: 23px;
+  padding-top: 200px;
+  font-weight: 400;
+  display: inline-block;
+  text-align: center;
+}
+
+.icone-hobbie {
+  padding-top: 7vh;
+  font-size: 150px;
+  color: #fff;
+}
+
+.hability {
+  font-family: "Poppins", sans-serif;
+  height: 85vh;
+  width: 100%;
+  text-align: center;
+}
+
+.hability ul{
+  list-style: none;
+}
+
+.hability h1{
+  font-family: "Propins", sans-serif;
+  font-size: 90px;
+}
+
+#habilidades {
+  margin-top: 230px;
+}
+
 .items-skill{
-  line-height: 30px;
+  line-height: 50px;
+  color: #fff;
+  font-size: 23px;
+  font-weight: 400;
+}
+
+#redes-sociais{
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+#redes-sociais a{
+  color: #fff;
+  font-family: "Poppis", sans-serif;
+  font-size: 80px;
+  text-decoration: none;
+}
+
+.linkedin {
+  margin-left: 10%;
+  margin-bottom: 70px;
+  float: left;
+}
+
+.github {
+  margin-right: 10%;
+  margin-bottom: 70px;
+  float: right;
 }
 
