--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ body {
   color: #d04b38;
 }
 
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
 #logo {
   font-size: 3rem;
   color: #fff;
