--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
   background-color: #131313;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+p{
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 #name {
@@ -187,5 +195,15 @@ h1 {
   margin-right: 10%;
   margin-bottom: 70px;
   float: right;
+}
+
+.footer {
+  background-color: #0f0f0f;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  margin-top: 6rem;
 }
 
