--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ h1 {
   50% {border-color: #fff;}
 }
 
-.sobre {
+#sobre {
   height: 85vh;
   width: 99.9%;
   font-family: "Poppins", sans-serif;
@@ -143,7 +143,7 @@ h1 {
   border: solid white 1px;
 }
 
-.sobre h1 {
+#sobre h1 {
   font-size: 90px;
 }
 
