--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ h1 {
   font-family: "Poppins", sans-serif;
   font-size: 23px;
   padding-top: 200px;
+  padding-bottom: 300px;
   font-weight: 300;
   display: inline-block;
   text-align: center;
