--- a/style.css
+++ b/style.css
@@ -132,12 +132,12 @@ h1 {
 }
 
 #sobre {
-  height: 85vh;
+  height: 85%;
   width: 99.9%;
   font-family: "Poppins", sans-serif;
   font-size: 23px;
   padding-top: 100px;
-  padding-bottom: 300px;
+  padding-bottom: 50px;
   font-weight: 300;
   display: inline-block;
   text-align: center;
@@ -156,7 +156,7 @@ h1 {
 
 .hability {
   font-family: "Poppins", sans-serif;
-  height: 85vh;
+  height: 85%;
   width: 100%;
   text-align: center;
 }
@@ -171,7 +171,7 @@ h1 {
 }
 
 #habilidades {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .items-skill{
