--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #131313;
+  background-color: #181818;
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
@@ -47,8 +47,22 @@ p{
   color: #fff;
 }
 
+.link-portfolio {
+  padding: 10px 10px;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  text-decoration: none;
+  color: #fff;
+}
+
 #encapsula-navegar ul li a:hover {
   color: #d04b38;
+}
+
+.link-portfolio:hover {
+  color: #d04b38;
+  font-size: 35px;
 }
 
 .fixed-top {
@@ -71,6 +85,10 @@ p{
   max-width: 200px;
   display: inline-block;
 }
+
+/* #sobre {
+  background-color: #131313;
+} */
 
 #sobre-mim {
   color: #fff;
@@ -154,7 +172,7 @@ h1 {
   color: #fff;
 }
 
-.hability {
+.hability, .portfolio {
   font-family: "Poppins", sans-serif;
   height: 85%;
   width: 100%;
@@ -162,16 +180,16 @@ h1 {
   text-align: center;
 }
 
-.hability ul{
+.hability ul, .portfolio ul{
   list-style: none;
 }
 
-.hability h1{
+.hability h1, .portfolio h1{
   font-family: "Propins", sans-serif;
   font-size: 90px;
 }
 
-#habilidades {
+#habilidades, .projects {
   margin-top: 100px;
 }
 
